--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 .header-container {
+  z-index: 1;
   background: rgb(65, 213, 208);
   background: radial-gradient(
     circle,
@@ -6,33 +7,24 @@
     rgba(42, 208, 202, 1) 91%,
     rgba(18, 203, 196, 1) 100%
   );
+  min-height: 75vh;
+  margin-bottom: 10vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem 0;
-  min-height: 470px;
+  grid-template-rows: 6vh auto;
+  border-radius: 0 0 30% 30%;
+  box-shadow: 0 1px 100px rgba(18, 203, 196, 1);
 }
 
-#welcome-msg {
-  color: transparent;
-  font-size: 8rem;
-  font-weight: 20px;
-  text-transform: uppercase;
-  font-family: "Rubik", sans-serif;
-  animation: fade-out-text 1.5s both;
-}
-
-/* animation: name duration timing-function delay iteration-count direction fill-mode; */
-
-@keyframes fade-out-text {
-  10%,
-  80% {
-    color: white;
-  }
-  100% {
-    color: transparent;
-  }
+.fade {
+  width: 100%;
+  height: 10vh;
+  background: rgb(18, 203, 196);
+  background: linear-gradient(
+    180deg,
+    rgba(18, 203, 196, 0.1) 0%,
+    rgba(30, 30, 30, 1) 100%
+  );
 }
 
 @keyframes fade-in {
@@ -46,51 +38,58 @@
 
 .info-container {
   color: white;
-  font-family: "Rubik", sans-serif;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
   width: 100%;
-  animation: fade-in 0.8s forwards;
-}
-
-.info-container h1 {
-  font-size: 4rem;
-  margin: 0;
-}
-
-.info-container h2 {
-  font-size: 2rem;
-  margin: 0;
+  animation: fade-in 1s forwards;
+  user-select: none;
 }
 
 .text-container {
-  padding: 2rem;
+  height: 70vh;
+  padding: 0 2rem;
   display: flex;
+
   flex-direction: column;
   justify-content: center;
+  filter: drop-shadow(0.8rem 0.5rem 2rem rgba(30, 30, 30, 0.5));
 }
 
-.button-container {
-  font-size: 3rem;
-  margin-top: 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
+.text-container h1 {
+  letter-spacing: -5px;
+  font-size: 9vh;
+  font-weight: 900;
 }
 
-#btn-link {
-  transition: transform 0.2s ease-in-out;
+.text-container h2 {
+  letter-spacing: -5px;
+  font-size: 7.5vh;
+  font-weight: 500;
 }
 
-#btn-link:hover {
-  transform: scale(1.2);
+.text-container h3 {
+  color: white;
+  font-size: 2.2vh;
 }
 
 #profile-img {
-  max-width: 25rem;
-  height: 25rem;
-  border-radius: 100%;
+  max-width: 500px;
+  max-height: 500px;
+  border-radius: 50% 50% 53% 47% / 36% 53% 47% 64%;
+  border: 4px solid #fff;
+  animation: levitate 3s infinite;
+  filter: drop-shadow(0 0 5rem rgba(255, 255, 255, 1));
+}
+
+@keyframes levitate {
+  0%,
+  100% {
+    transform: translateY(-15px);
+  }
+
+  40% {
+    transform: translate(0);
+  }
 }
